# StreamWise

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_enable_pgvector.py  002_core_catalog.py  003_users_auth.py  004_interactions.py  005_embeddings.py  006_model_versions.py  007_series_progress.py  008_p2_features.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/core/: jwt.py
apps/api/app/db/: base.py  session.py
apps/api/app/dependencies/: auth.py
apps/api/app/middleware/: rate_limit.py
apps/api/app/models/: __init__.py  embedding.py  interaction.py  p2.py  provider.py  title.py  user.py
apps/api/app/routers/: admin.py  auth.py  catalog.py  integrations.py  interactions.py  recommendations.py  titles.py  users.py
apps/api/app/schemas/: affinity.py  auth.py  catalog.py  catalog_changes.py  common.py  content_filter.py  context.py  interaction.py  recommendation.py  title.py  user.py
apps/api/app/services/: affinity_service.py  auth_service.py  bandit_service.py  catalog_change_service.py  catalog_service.py  content_embedding_service.py  context_filter.py  embedding_generator.py  explainability_service.py  import_service.py  (+11 more)
apps/api/scripts/: seed_genres_providers.py
apps/api/tests/: conftest.py  test_config.py  test_rate_limit.py
ml/training/: .gitkeep  config.yaml  export_item_embeddings.py  export_user_embeddings.py  generate_embeddings.py  import_movielens.py  pyproject.toml  retrain_pipeline.py  seed_synthetic_platform_data.py  train_two_tower.py  two_tower_model.py
(+99 files in other folders)
