[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamwise-ml-training"
version = "0.1.0"
description = "StreamWise ML training and embedding pipelines"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.6.0",
    "tensorflow>=2.16.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
    "mlflow>=2.16.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
